--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}cysu | Образовательная платформа{% endblock %}
-{% block meta_description %}CYSU - современная альтернатива. Лучшая замена Moodle для изучения программирования. Лекции, практические задания, материалы по информационным технологиям.{% endblock %}
+{% block meta_description %}cysu - современная образовательная платформа для изучения программирования и IT. Лучшая замена EIOS, Moodle, PPK. Лекции, практические задания, материалы по информационным технологиям.{% endblock %}
 {% block meta_keywords %}иос сгту, eios sstu, eios, moodle, ppk, ппк, сгту, sstu, CYSU, образовательная платформа, программирование, обучение, лекции, практика, IT, разработка, Python, JavaScript, Java, C++, веб-разработка, базы данных, алгоритмы, СГТУ, информационные технологии, электронное обучение, дистанционное образование{% endblock %}
 {% block content %}
 
@@ -10,8 +10,7 @@
         <header class="text-center">
             <div class="mb-5">
                 <h1 class="display-5 fw-bold text-white mb-3">cysu</h1>
-                <p class="text-muted mb-3">Современная замена Moodle</p>
-                <p class="text-muted small">ДЛЯ ВСЕХ ТЕХ КТО НЕНАВИДИТ MOODLE</p>
+                <p class="text-muted mb-3">Современная образовательная платформа</p>
             </div>
             
             <section class="row g-3 justify-content-center mb-4">
