--- a/app/templates/tickets/ticket_detail.html
+++ b/app/templates/tickets/ticket_detail.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
+{% from 'macros/breadcrumbs.html' import render_breadcrumbs %}
 
 {% block title %}Тикет #{{ ticket.id }} - cysu{% endblock %}
+
+{% block breadcrumbs %}
+{{ render_breadcrumbs([
+    {"title": "Главная", "url": url_for('main.index'), "icon": "fas fa-home"},
+    {"title": "Поддержка", "url": url_for('main.support'), "icon": "fas fa-life-ring"},
+    {"title": "Тикеты", "url": url_for('tickets.list'), "icon": "fas fa-ticket-alt"},
+    {"title": "Тикет #" + ticket.id|string, "url": None, "icon": "fas fa-file-alt"}
+]) }}
+{% endblock %}
 
 {% block content %}
 <div class="container py-4">
