--- a/app/templates/admin/settings.html
+++ b/app/templates/admin/settings.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% from 'macros/breadcrumbs.html' import admin_breadcrumb %}
 
 {% block title %}Настройки сайта - cysu{% endblock %}
+
+{% block breadcrumbs %}
+{{ admin_breadcrumb("Настройки") }}
+{% endblock %}
 
 {% block content %}
 <div class="admin-users">
