--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
+{% from 'macros/breadcrumbs.html' import simple_breadcrumb %}
+
 {% block title %}Вход{% endblock %}
+
+{% block breadcrumbs %}
+{{ simple_breadcrumb("Вход") }}
+{% endblock %}
+
 {% block content %}
 <div class="d-flex justify-content-center align-items-center" style="min-height: 60vh;">
   <div class="card p-4 mx-3" style="min-width:280px; max-width: 400px; width:100%; border-radius: 12px;">
