--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,29 +13,29 @@
     <meta name="theme-color" content="#121212">
     <meta name="msapplication-TileColor" content="#121212">
     
-    <meta name="description" content="{% block meta_description %}CYSU - современная альтернатива EIOS. Образовательная платформа для изучения программирования. Замена Moodle. Лекции, практические задания, материалы по информационным технологиям.{% endblock %}">
+    <meta name="description" content="{% block meta_description %}cysu - современная образовательная платформа для изучения программирования и IT. Замена EIOS, Moodle. Лекции, практические задания, материалы по информационным технологиям.{% endblock %}">
     <meta name="keywords" content="{% block meta_keywords %}иос сгту, eios sstu, eios, moodle, ppk, ппк, сгту, sstu, CYSU, образовательная платформа, программирование, обучение, лекции, практика, IT, разработка, Python, JavaScript, Java, C++, веб-разработка, базы данных, алгоритмы, СГТУ, информационные технологии, электронное обучение, дистанционное образование{% endblock %}">
-    <meta name="author" content="CYSU Team - СГТУ">
+    <meta name="author" content="cysu">
     <meta name="robots" content="index, follow">
     
-    <meta property="og:title" content="{% block og_title %}CYSU - Образовательная платформа{% endblock %}">
-    <meta property="og:description" content="{% block og_description %}CYSU - Образовательная платформа СГТУ для изучения программирования. Аналог EIOS, Moodle, PPK.{% endblock %}">
+    <meta property="og:title" content="{% block og_title %}cysu - Образовательная платформа{% endblock %}">
+    <meta property="og:description" content="{% block og_description %}cysu - современная образовательная платформа для изучения программирования и IT. Замена EIOS, Moodle.{% endblock %}">
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ request.url }}">
-    <meta property="og:site_name" content="CYSU - СГТУ">
+    <meta property="og:site_name" content="cysu"/>
     <meta property="og:locale" content="ru_RU">
     
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{% block twitter_title %}CYSU - Образовательная платформа{% endblock %}">
-    <meta name="twitter:description" content="{% block twitter_description %}CYSU - Образовательная платформа СГТУ для изучения программирования. Аналог EIOS, Moodle, PPK.{% endblock %}">
+    <meta name="twitter:title" content="{% block twitter_title %}cysu - Образовательная платформа{% endblock %}">
+    <meta name="twitter:description" content="{% block twitter_description %}cysu - современная образовательная платформа для изучения программирования и IT. Замена EIOS, Moodle.{% endblock %}">
     
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "EducationalOrganization",
         "name": "cysu - Образовательная платформа",
-        "alternateName": ["cysu", "ИОС СГТУ", "EIOS SSTU", "eios sstu", "иос сгту"],
-        "description": "cysu - современная альтернатива EIOS Образовательная платформа. Лучшая замена Moodle.",
+        "alternateName": ["cysu", "cysu.ru", "образовательная платформа"],
+        "description": "cysu - современная образовательная платформа для изучения программирования и IT. Замена EIOS, Moodle.",
         "url": "{{ request.url_root }}",
         "logo": "{{ request.url_root }}static/icons/android-chrome-192x192.png",
         "sameAs": [
@@ -63,6 +63,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <meta name="yandex-verification" content="9385f11dab91d75e" />
     
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico', v=timestamp) }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icons/favicon-32x32.png', v=timestamp) }}">
@@ -86,7 +87,7 @@
     <meta name="twitter:image" content="{{ request.url_root }}static/icons/android-chrome-192x192.png">
     <meta name="twitter:image:alt" content="CYSU - Образовательная платформа СГТУ">
     
-    <title>{% block title %}CYSU - Образовательная платформа{% endblock %}</title>
+    <title>{% block title %}cysu - Образовательная платформа{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css?v={{ timestamp }}">
@@ -1600,6 +1601,7 @@
 <main class="container flex-grow-1 py-4" style="min-height: calc(100vh - 140px);" role="main" aria-label="Основное содержимое">
     {% if current_user.is_authenticated %}
     {% endif %}
+    {% block breadcrumbs %}{% endblock %}
     {% block content %}{% endblock %}
 </main>
 
